data, timmer added with conflict

--- a/css/style.css
+++ b/css/style.css
@@ -59,3 +59,17 @@ section{
     width: 100%;
     height: 100%;
 }
+
+#rightCard .timmer{
+    width: 100px;
+    height: 100px;
+    background-image: url("../img/timer-bg.png");
+    background-position: center;
+    background-size: 100% 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.timmer p{
+    font-size: 25px;
+}
