--- a/css/style.css
+++ b/css/style.css
@@ -1,47 +1,49 @@
-@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;500;600;700&display=swap');
-
+@import url("https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;500;600;700&display=swap");
 
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Josefin Sans', sans-serif;
+    font-family: "Josefin Sans", sans-serif;
     background-color: #e8e8e8;
 }
-:root{
+:root {
     --right-card-width: 445px;
     --item-space: 15px;
 }
-section{
-    height: 100vh;
+section {
+    /* height: 100vh; */
     display: flex;
     justify-content: center;
     align-items: center;
 }
-.container{
+.container {
     display: grid;
-    grid-template-columns: 100px calc(var(--right-card-width) + (var(--item-space) * 3)) 100px;
+    grid-template-columns: 100px calc(
+            var(--right-card-width) + (var(--item-space) * 3)
+        ) 100px;
     justify-content: center;
     align-items: center;
     column-gap: 60px;
 }
-#left_card{
+#left_card {
     width: 100px;
     height: auto;
 }
 
-#left_card img{
+#left_card img {
     width: 100%;
     height: 100%;
 }
-#card_list{
+#card_list {
     /* width: 500px; */
     display: grid;
     grid-template-columns: repeat(4, calc(var(--right-card-width) / 4));
-    grid-template-rows: repeat(4, calc(var(--right-card-width) / 4));
+    /* grid-template-rows: repeat(4, calc(var(--right-card-width) / 4)); */
+    grid-template-rows: repeat(17, calc(var(--right-card-width) / 4));
     gap: var(--item-space);
 }
-.item{
+.item {
     width: 100%;
     height: 100%;
     display: flex;
@@ -51,26 +53,27 @@ section{
     border-radius: 15px;
 }
 
-.item img{
+.item img {
     width: 65px;
     height: 65px;
     display: inline-block;
     background-color: #ffffff;
 }
 
-.item img.star.dot, .item img.star.scale{
+.item img.star.dot,
+.item img.star.scale {
     width: 85px;
     height: 85px;
 }
 
-
-#rightCard{
+#rightCard {
     width: 100px;
     row-gap: 25px;
     display: flex;
     flex-flow: column wrap;
 }
-#rightCard .incressCount, #rightCard .discressCount{
+#rightCard .incressCount,
+#rightCard .discressCount {
     background-size: 100% 100%;
     width: 100px;
     height: 100px;
@@ -79,25 +82,25 @@ section{
     justify-content: center;
     align-items: center;
 }
-#rightCard .incressCount{
+#rightCard .incressCount {
     background-image: url("../img/star-bg.png");
 }
-#rightCard .incressCount p{
+#rightCard .incressCount p {
     margin-top: 20px;
     font-size: 40px;
 }
-#rightCard .discressCount{
+#rightCard .discressCount {
     background-image: url("../img/card-list-bg.png");
 }
-#rightCard .discressCount p{
+#rightCard .discressCount p {
     font-size: 40px;
 }
-#rightCard p{
+#rightCard p {
     font-weight: bold;
     color: #969696;
 }
 
-#rightCard .timmer{
+#rightCard .timmer {
     width: 100px;
     height: 100px;
     background-image: url("../img/timer-bg.png");
@@ -107,6 +110,6 @@ section{
     justify-content: center;
     align-items: center;
 }
-.timmer p{
+.timmer p {
     font-size: 25px;
 }
