--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@
     --item-space: 15px;
 }
 section {
-    /* height: 100vh; */
+    height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -39,8 +39,8 @@ section {
     /* width: 500px; */
     display: grid;
     grid-template-columns: repeat(4, calc(var(--right-card-width) / 4));
-    /* grid-template-rows: repeat(4, calc(var(--right-card-width) / 4)); */
-    grid-template-rows: repeat(17, calc(var(--right-card-width) / 4));
+    grid-template-rows: repeat(4, calc(var(--right-card-width) / 4));
+    /* grid-template-rows: repeat(17, calc(var(--right-card-width) / 4)); */
     gap: var(--item-space);
 }
 .item {
