--- a/css/style.css
+++ b/css/style.css
@@ -16,12 +16,13 @@ section {
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-flow: column;
 }
 .container {
     display: grid;
-    grid-template-columns: 100px calc(
-            var(--right-card-width) + (var(--item-space) * 3)
-        ) 100px;
+    grid-template-columns:
+        100px calc(var(--right-card-width) + (var(--item-space) * 3))
+        100px;
     justify-content: center;
     align-items: center;
     column-gap: 60px;
@@ -112,4 +113,54 @@ section {
 }
 .timmer p {
     font-size: 25px;
+}
+
+.control-btn {
+    margin-top: 20px;
+}
+
+.control-btn button {
+    border: none;
+    padding: 10px 25px;
+    border: 1px solid #969696;
+    border-radius: 5px;
+    margin-left: 10px;
+    margin-right: 10px;
+    cursor: pointer;
+}
+
+.control-btn button img {
+    width: 25px;
+}
+
+.randomCard {
+    background-size: 100% 100%;
+    width: 100px;
+    height: 100px;
+    background-position: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 15px;
+    background-color: white;
+    border: 1px solid #9696968e;
+}
+
+.randomCard img {
+    width: 60px;
+    height: 60px;
+    background-color: white;
+    animation-name: zoomInOut;
+    animation-duration: 2s;
+    animation-iteration-count: infinite;
+    animation-direction: alternate-reverse;
+}
+
+@keyframes zoomInOut {
+    0% {
+        transform: scale(1);
+    }
+    50% {
+        transform: scale(0.8);
+    }
 }
