--- a/css/style.css
+++ b/css/style.css
@@ -52,6 +52,7 @@ section {
     align-items: center;
     background-color: #ffffff;
     border-radius: 15px;
+    cursor: pointer;
 }
 
 .item img {
@@ -74,7 +75,7 @@ section {
     flex-flow: column wrap;
 }
 #rightCard .incressCount,
-#rightCard .discressCount {
+#rightCard .cardStore {
     background-size: 100% 100%;
     width: 100px;
     height: 100px;
@@ -90,10 +91,10 @@ section {
     margin-top: 20px;
     font-size: 40px;
 }
-#rightCard .discressCount {
+#rightCard .cardStore {
     background-image: url("../img/card-list-bg.png");
 }
-#rightCard .discressCount p {
+#rightCard .cardStore p {
     font-size: 40px;
 }
 #rightCard p {
@@ -133,7 +134,7 @@ section {
     width: 25px;
 }
 
-.randomCard {
+.selectCardCounter {
     background-size: 100% 100%;
     width: 100px;
     height: 100px;
@@ -146,12 +147,12 @@ section {
     border: 1px solid #9696968e;
 }
 
-.randomCard img {
+.selectCardCounter img {
     width: 60px;
     height: 60px;
     background-color: white;
     animation-name: zoomInOut;
-    animation-duration: 2s;
+    animation-duration: 3s;
     animation-iteration-count: infinite;
     animation-direction: alternate-reverse;
 }
@@ -162,5 +163,8 @@ section {
     }
     50% {
         transform: scale(0.8);
+    }
+    100% {
+        transform: scale(1);
     }
 }
